[project]
name = "z4-solver"
version = "2023.12.06"
description = "z3++"
readme = "README.md"
authors = [
	{ name = "Asger Hautop Drewsen", email = "asger@tyilo.com" }
]
license.text = "GPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "z3-solver>=4.13.3.0",
]

[project.urls]
Repository = "https://github.com/Tyilo/z4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4"]
