[project]
name = "z4-solver"
version = "2024.12.14.1"
description = "z3++"
readme = "README.md"
authors = [
	{ name = "Asger Hautop Drewsen", email = "asger@tyilo.com" }
]
license.text = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.13.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.urls]
Repository = "https://github.com/Tyilo/z4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # Clashes with D211
    "D212", # Clashes with D213

    # Incompatible with formatter:
    "COM812",
    "ISC001",
]
